--- a/CarbonCapture.html
+++ b/CarbonCapture.html
@@ -67,13 +67,13 @@ function send() {
   recycle = 0;
  Battery.measure(function (val) {
     Battery.detectedVal = val;
-  if(Battery.detectedVal==null){
+  if(Battery.detectedVal==0){
    document.getElementById('state').innerHTML ="碳捕捉";
         document.getElementById('data').innerHTML = (['電池電壓:',Battery.detectedVal,("<br/>"),("<br/>"),'循環次數:',recycle,"次"].join(''));
   }else{
     
     var BdV=Battery.detectedVal;
-    BdV=BdV.toFixed(2);
+    BdV=BdV.toFixed(4);
     document.getElementById('data').innerHTML = (['電池電壓:',BdV,"V",("<br/>"),("<br/>"),'循環次數:',recycle,"次"].join(''));
   } 
 });
