--- a/WebDesign_lesson5.html
+++ b/WebDesign_lesson5.html
@@ -362,6 +362,10 @@
     </p>
    
    </div>
+  
+   <div style="text-align:center;">
+   <img src="images/WebDesign/WebDesign-5-3.png"  alt=""><br>
+   </div>
 
 
 
