--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/111ceproject/">碳捕捉暨Na循環發電IoT系統</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
+                
               </div>
 
           </li>
