--- a/111ceproject.html
+++ b/111ceproject.html
@@ -71,6 +71,10 @@
      <iframe width="800" height="400" src="https://www.youtube.com/embed/c4ap-E6POdY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
      <br>
+      
+        <div style="text-align:center;">
+       <img src="images/111ceprojectposter.png"  alt="">
+       </div>
      <a  href="CarbonCapture.html">IoT系統連結</a>
        
 
