--- a/LineBot_lesson1.html
+++ b/LineBot_lesson1.html
@@ -25,7 +25,7 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="test.html">高中物理</a>
+                  <a href="https://www.glowscript.org/#/user/ttnpgjqua26/folder/MyPrograms/program/gravity">高中物理</a>
                   <a href="program.html">LineBot</a>
                   <a href="program.html">VPython</a>
               </div>
@@ -36,6 +36,7 @@
                   <a href="phystest.html">高中物理題目</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
               </div>
+
           </li>
 
           
@@ -44,7 +45,9 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
+                
               </div>
 
           </li>
