--- a/phystest.html
+++ b/phystest.html
@@ -27,12 +27,11 @@
   <div id="news" class="big-bg">
     <header class="page-header wrapper">
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
-      <nav>
+       <nav>
         <ul class="main-nav">
-          <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="test.html">高中物理</a>
+                  <a href="https://www.glowscript.org/#/user/ttnpgjqua26/folder/MyPrograms/program/gravity">高中物理</a>
                   <a href="program.html">LineBot</a>
                   <a href="program.html">VPython</a>
               </div>
@@ -52,13 +51,14 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
+                
               </div>
 
           </li>
           
           <li><a href="#">讀書心得</a></li>
-        </ul>
         </ul>
       </nav>
     </header>
