--- a/111ceproject.html
+++ b/111ceproject.html
@@ -83,7 +83,7 @@
       <p>成績:111化工群創意組全國第一名</p>
       
        <div style="text-align:center;">
-       <img src="images/ceprojcet/111award1.JPG"  alt="">
+       <img src="images/ceprojcet/111award1.jpg"  alt="">
        </div>
         <div style="text-align:center;">
        <img src="images/ceprojcet/111award2.jpg"  alt="">
