--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="https://www.glowscript.org/#/user/ttnpgjqua26/folder/MyPrograms/program/gravity">高中物理</a>
-                  <a href="program.html">LineBot</a>
-                  <a href="program.html">VPython</a>
+                  <a href="WebDesign.html">網頁設計</a>
+                  <a href="LineBot.html">LineBot</a>
+                  <a href="VPython.html">VPython</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
