--- a/VPython.html
+++ b/VPython.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
   <meta charset="utf-8">
-   <title>LineBot課程內容</title>
+   <title>VPython課程內容</title>
    <meta name="description" content="提供物理與程式學習的教學與心得">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,9 +26,9 @@
           <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="test.html">高中物理</a>
-                  <a href="program.html">LineBot</a>
-                  <a href="program.html">VPython</a>
+                  <a href="WebDesign.html">網頁設計</a>
+                  <a href="LineBot.html">LineBot</a>
+                  <a href="VPython.html">VPython</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
