--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -92,6 +92,7 @@
       <div style="text-align:center;">
        <a href="https://onedrive.live.com/view.aspx?resid=4790768B04138532!107&ithint=file%2cpptx&authkey=!AHguUUDDjXpSiyM"><img src="images/taigi/h-B1-Lesson1.png"  alt=""></a>
        </div>
+      <p>資料來源：真平語文</p>
       <br><br>
 
 
