--- a/physics2-1.html
+++ b/physics2-1.html
@@ -60,7 +60,7 @@
   </div>
   
     <div class="wrapper">
-      <h2 class="page-title">LineBot</h2>
+      <h2 class="page-title">高中物理學習</h2>
     </div>
 
   <div class="news-contents wrapper">
