--- a/grades.html
+++ b/grades.html
@@ -91,6 +91,11 @@
 
 <div id="gradetable" style="display: none;text-align:center">
 
+<br>
+<h2 class="js-result">上課抽抽樂</h2>
+<button class="js-start">開抽！</button>
+<br><br>
+
 <table border="1" style="width:100%">
 <tr>
 <th>號碼</th>
@@ -385,9 +390,26 @@
 </tr>
 </table>
 
+
+
+
 </div>
 
+
+
+
+
+
+
+<script src="JS/choice.js"></script>
+
+
+
+
+
 <script src="JS/grade.js"></script>
+
+
 
 
 
