--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           </li>
           
-          <li><a href="#">讀書心得</a></li>
+          <li><a href="https://www.canva.com/design/DAFNATqUImA/gLYAslebBwU-u6lNNVOAyQ/view?utm_content=DAFNATqUImA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">讀書心得</a></li>
         </ul>
       </nav>
     </header>
