--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   
   <script src="JS/menu.js"></script>
 
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LQRF00LJWJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LQRF00LJWJ');
+</script>
   
 </head>
 
