--- a/exp.html
+++ b/exp.html
@@ -25,7 +25,7 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="physics2-1.html">物理課程</a>
+                  <a href="physics.html">物理課程</a>
                   <a href="WebDesign.html">網頁設計</a>
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
@@ -92,7 +92,7 @@
     <aside>
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
-         <li><a href="physcis.html">物理學習</a></li>
+         <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
           <li><a href="exp.html">科學實驗</a></li>
          <li><a href="#">讀書心得</a></li>
