--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -22,10 +22,10 @@
     <header class="page-header wrapper">
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
           <nav>
-        <ul class="main-nav">
+       <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="physics2-1.html">物理課程</a>
+                  <a href="physics.html">物理課程</a>
                   <a href="WebDesign.html">網頁設計</a>
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
@@ -55,7 +55,7 @@
 
           </li>
           
-          <li><a href="https://www.canva.com/design/DAFNATqUImA/gLYAslebBwU-u6lNNVOAyQ/view?utm_content=DAFNATqUImA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">讀書心得</a></li>
+          <li><a href="#">讀書心得</a></li>
         </ul>
       </nav>
     </header>
