--- a/phyhistorytest.html
+++ b/phyhistorytest.html
@@ -25,12 +25,14 @@
     <header class="page-header wrapper">
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
        <nav>
-        <ul class="main-nav">
+       <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="https://www.glowscript.org/#/user/ttnpgjqua26/folder/MyPrograms/program/gravity">高中物理</a>
-                  <a href="program.html">LineBot</a>
-                  <a href="program.html">VPython</a>
+                  <a href="physics.html">物理課程</a>
+                  <a href="WebDesign.html">網頁設計</a>
+                  <a href="LineBot.html">LineBot</a>
+                  <a href="VPython.html">VPython</a>
+                  <a href="Ohtaigi.html">台語課程</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
@@ -49,6 +51,7 @@
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
+                   <a href="https://guidephy.github.io/grades.html">課堂計分</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                 
               </div>
