--- a/BridgeDesigner.html
+++ b/BridgeDesigner.html
@@ -173,7 +173,7 @@
     <aside>
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
-         <li><a href="physcis.html">物理學習</a></li>
+         <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="test.html">線上題庫</a></li>
          <li><a href="contact.html">CONTACT</a></li>
