--- a/LineBot.html
+++ b/LineBot.html
@@ -179,7 +179,7 @@
     <aside>
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
-         <li><a href="physcis.html">物理學習</a></li>
+         <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="#">讀書心得</a></li>
