--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
           </li>
           
-          <li><a href="https://www.canva.com/design/DAFNATqUImA/gLYAslebBwU-u6lNNVOAyQ/view?utm_content=DAFNATqUImA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">讀書心得</a></li>
+          <li><a href="reading.html">讀書心得</a></li>
         </ul>
       </nav>
     </header>
@@ -450,7 +450,7 @@
          <li><a href="physics.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
-         <li><a href="#">讀書心得</a></li>
+         <li><a href="reading.html">讀書心得</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
