--- a/exp.html
+++ b/exp.html
@@ -85,7 +85,7 @@
 </div>
 林仟弘 設計的 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFPoH7gZAc&#x2F;view?utm_content=DAFPoH7gZAc&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">探究與實作-刷刷車</a>
 <br><br>
-<a href="https://drive.google.com/file/d/18SjpChTswn60mT5VaPCVG9y6k5HpmHDR/view?usp=sharing" target="_blank">課程學習單</a>
+<a href="https://drive.google.com/file/d/18SjpChTswn60mT5VaPCVG9y6k5HpmHDR/view?usp=sharing" target="_blank">刷刷車課程學習單</a>
      
     </article>
 
