--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -44,7 +44,7 @@
           
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction3()">作品分享</a>
               <div class="dropdown-content" id="myDropdown3">
-                  <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
+                  <a href="https://forms.gle/C7QBBEWFfhTgyMEy8">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
