--- a/exp.html
+++ b/exp.html
@@ -99,8 +99,8 @@
   </iframe>
 </div>
 
-<br><br>
-<a href="https://drive.google.com/file/d/18SjpChTswn60mT5VaPCVG9y6k5HpmHDR/view?usp=sharing" target="_blank">刷刷車課程學習單</a>
+<br>
+<p>學習單下載:</><a href="https://drive.google.com/file/d/18SjpChTswn60mT5VaPCVG9y6k5HpmHDR/view?usp=sharing" target="_blank">刷刷車課程學習單</a>
 <br><br>
       
       
