--- a/physics.html
+++ b/physics.html
@@ -102,7 +102,7 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFS0cc4W5U&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<br><p>學習單下載:</><a href="https://drive.google.com/file/d/12qM9eg67IyPWjsDPqDmJN_CujLSH-ec1/view?usp=sharing" target="_blank">平面運動講義</a>
+<br><p>講義下載:</><a href="https://drive.google.com/file/d/12qM9eg67IyPWjsDPqDmJN_CujLSH-ec1/view?usp=sharing" target="_blank">平面運動講義</a>
 
 <br><br>
       
