--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
         ttnpgjqua26@gish.tyc.edu.tw
       </p>
       <img style="text-align:center;" src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
+      
+       <h3 class="sub-title">瀏覽人次</h3>
+     <!-- hitwebcounter Code START -->
+      <a href="https://www.hitwebcounter.com" target="_blank">
+      <img src="https://hitwebcounter.com/counter/counter.php?page=8081059&style=0024&nbdigits=5&type=page&initCount=100" title="Free Counter" Alt="web counter"   border="0" /></a>      
+      
     </aside>
 
  
