--- a/index.html
+++ b/index.html
@@ -206,9 +206,8 @@
       <img style="text-align:center;" src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
       
        <h3 class="sub-title">瀏覽人次</h3>
-     <!-- hitwebcounter Code START -->
-      <a href="https://www.hitwebcounter.com" target="_blank">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=8081060&style=0024&nbdigits=5&type=page&initCount=100" title="Free Counter" Alt="web counter"   border="0" /></a> 
+   
+      <img align="center" src="https://hitwebcounter.com/counter/counter.php?page=8081060&style=0024&nbdigits=5&type=page&initCount=100" title="Free Counter" Alt="web counter"   border="0" /></a> 
 
     </aside>
 
