--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
        <h3 class="sub-title">瀏覽人次</h3>
       <br>
    
-     <img src="https://hitwebcounter.com/counter/counter.php?page=8081063&style=0030&nbdigits=5&type=page&initCount=100" title="Free Counter" Alt="web counter"   border="0" /></a><p>次</p> 
+     <img src="https://hitwebcounter.com/counter/counter.php?page=8081063&style=0030&nbdigits=5&type=page&initCount=100" title="Free Counter" Alt="web counter"   border="0" /></a>次
 
     </aside>
 
