--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
        <h3 class="sub-title">瀏覽人次</h3>
       <br>
    
-     <img src="https://hitwebcounter.com/counter/counter.php?page=8081066&style=0005&nbdigits=5&type=page&initCount=1000" title="Free Counter" Alt="web counter"   border="0" /></a>          " title="Free Counter" Alt="web counter"   border="0" /></a> 次
+     <img src="https://hitwebcounter.com/counter/counter.php?page=8081066&style=0005&nbdigits=5&type=page&initCount=1000" title="Free Counter" Alt="web counter"   border="0" /></a>       
 
     </aside>
 
