--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
           </li>
           
-          <li><a href="reading.html">讀書心得</a></li>
+          <li><a href="https://docs.google.com/presentation/d/17HxteZzISyXK40-J04uOfQcctOxsbt9iiDe0xDt_bEk/edit?usp=sharing">讀書心得</a></li>
         </ul>
       </nav>
     </header>
