--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction3()">作品分享</a>
               <div class="dropdown-content" id="myDropdown3">
                   <a href="https://forms.gle/C7QBBEWFfhTgyMEy8">VR遊觀音</a>
-                  <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
+                  <a href="planet285.html">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                    <a href="https://guidephy.github.io/grades.html">課堂計分</a>
