--- a/exp.html
+++ b/exp.html
@@ -182,6 +182,7 @@
   </iframe>
 </div>
 <br>
+<p>工作紀錄下載:</><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=share_link" target="_blank">實驗工作紀錄(空白)</a>
 <p>學習單下載:</><a href="https://drive.google.com/file/d/1IT_W1jWAmYk-MYExDo9iV19AyAGi77I_/view?usp=sharing" target="_blank">刷刷車探究實驗報告(空白)</a>
 <br><br>
       
