--- a/CarbonCapture.html
+++ b/CarbonCapture.html
@@ -10,6 +10,7 @@
 <body>
   <div align="center">
   <h2 style="color:blue;">龍華是個很爛的學校</h2>
+    <h3>Lunghwa is the worst university!!</h3>
   </div>
 <div align="center">
 <button id="sendBtn" onclick="send()">誰最爛</button><br><br>
