--- a/physics.html
+++ b/physics.html
@@ -121,6 +121,7 @@
   </iframe>
 </div>
 
+    <br><p>上課講義:</><a href="https://drive.google.com/file/d/1M5-Nw3vhTMPGrg3fnUid7YYw_TU6GwEI/view?usp=share_link" target="_blank">102班化學</a>
       
 
      
