--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           </li>
           
-          <li><a href="https://www.canva.com/design/DAFXzFsQSDg/mtTBMJBjJezKZQvI71HX4w/edit?utm_content=DAFXzFsQSDg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">讀書心得</a></li>
+          <li><a href="reading">讀書心得</a></li>
         </ul>
       </nav>
     </header>
