--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           </li>
           
-          <li><a href="reading">讀書心得</a></li>
+          <li><a href="https://www.canva.com/design/DAFckmAX8Ko/aMiBZpzj_d46F_ufcYjEOA/view?utm_content=DAFckmAX8Ko&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">讀書心得</a></li>
         </ul>
       </nav>
     </header>
