--- a/exercises/WebDesign/CSS_exercise.html
+++ b/exercises/WebDesign/CSS_exercise.html
@@ -20,6 +20,11 @@ margin-left: 8px;
 margin-bottom: 30px;
 
 }
+
+h1:hover{
+
+    color:blue;
+}
 h6 {
 color:blue;
 font-size:20px;
@@ -30,6 +35,12 @@ margin-left: 8px;
 margin-top: 10px;
 margin-bottom: 40px;
 }
+
+h6:hover{
+    background-color:yellow;
+}
+
+
 p {
 color:white;
 font-size:16px;
@@ -41,6 +52,17 @@ width: 200px;
 margin-top: 0px;
 margin-bottom: 0px;
 text-align: center;
+cursor: pointer;
+}
+
+p:hover{
+
+    opacity:0.4
+}
+
+p:active{
+
+    background-color:red;
 }
 </style>
 
