--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -337,8 +337,8 @@
    
 
       <br>
-      
-      <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">課堂練習</a>
+      <h3>進階練習</>
+      <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">練習連結</a><br><br>
 
       <h3>課堂作業2-設計自我介紹的網頁</h3>
       <br>
