--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -337,9 +337,12 @@
    
 
       <br>
-      <h3>進階練習</>
+      <h3>進階練習1</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">練習連結</a><br><br>
-
+      <h3>進階練習2</h3>
+      <a href="https://guidephy.github.io/exercises/WebDesign/CSS_Responsive_exercise.html">練習連結</a><br><br>
+      
+      
       <h3>課堂作業2-設計自我介紹的網頁</h3>
       <br>
       <p>需具備下列內容:<br>
