--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -337,9 +337,9 @@
    
 
       <br>
-      <h3>進階練習1</h3>
+      <h3>進階練習-互動功能</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">練習連結</a><br><br>
-      <h3>進階練習2</h3>
+      <h3>進階練習-響應式網頁設計(RWD)</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_Responsive_exercise.html">練習連結</a><br><br>
       
       
