--- a/exercises/WebDesign/CSS_Responsive_exercise.html
+++ b/exercises/WebDesign/CSS_Responsive_exercise.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Responsive Two-Column Layout Example</title>
 	<style>
 		.container {
@@ -40,7 +41,7 @@
         }
 
 
-		@media (max-width: 850px) {
+		@media (max-width: 600px) {
 			.container {
 				flex-direction: column;
 			}
