--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           </li>
           
-          <li><a href="https://www.canva.com/design/DAFNATqUImA/gLYAslebBwU-u6lNNVOAyQ/view?utm_content=DAFNATqUImA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">讀書心得</a></li>
+          <li><a href=https://forms.gle/oV38aCj6bz4eYafLA"">物理補強作業</a></li>
         </ul>
       </nav>
     </header>
