--- a/WebDesign_lesson6.html
+++ b/WebDesign_lesson6.html
@@ -187,6 +187,9 @@
         </p>
       </div>  
       <p>其它常見的cursor</p>
+      <p style="cursor:pointer; display: inline-block;">pointer&sbquo;</p>
+      <p style="cursor:progress; display: inline-block;">progress&sbquo;</p>
+      <p style="cursor:move; display: inline-block;">move&sbquo;</p>
       <p style="cursor:help; display: inline-block;">help&sbquo;</p>
       <p style="cursor:wait; display: inline-block;">wait&sbquo;</p>
       <p style="cursor:crosshair; display: inline-block;">crosshair&sbquo;</p>
