--- a/WebDesign_lesson6.html
+++ b/WebDesign_lesson6.html
@@ -166,7 +166,7 @@
       <h3>三、CSS互動功能</h3>
       
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">互動範例連結</a><br><br>
-      <p>1、<font color="red">cusor:</font></p>
+      <p>1、<font color="red">cursor:</font></p>
       <p>cusor可改變滑鼠鼠標形狀，當鼠標移至該元素時會顯示設定的鼠標形狀，請於CSS中增加下列代碼進行練習。</p>
       <div style="background-color:#FFFF96">
         <p>
