--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -341,6 +341,8 @@
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">練習連結</a><br><br>
       <h3>進階練習-響應式網頁設計(RWD)</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_Responsive_exercise.html">練習連結</a><br><br>
+      <h3>進階練習-選單</h3>
+      <a href="https://guidephy.github.io/exercises/WebDesign/menu_exercise.html">練習連結</a><br><br>
       
       
       <h3>課堂作業2-設計自我介紹的網頁</h3>
