--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -343,6 +343,10 @@
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_Responsive_exercise.html">練習連結</a><br><br>
       <h3>進階練習-選單</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/menu_exercise.html">練習連結</a><br><br>
+      <h3>進階練習-個人網站首頁</h3>
+      <a href="https://drive.google.com/drive/folders/1I9jDpq88vh4BHUoVMzcfuoyWh9B4ESz7?usp=sharing">練習連結</a><br>
+      <a href="https://www.youtube.com/watch?v=GdrbE-s5DgQ">參考資料</a><br>
+      <br>
       
       
       <h3>課堂作業2-設計自我介紹的網頁</h3>
