--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           </li>
           
-          <li><a href="https://forms.gle/BsF2XiSjKeUFKhrC6">網頁設計作業</a></li>
+          <li><a href="https://forms.gle/8VqydnjLwg8vsboHA">網頁設計作業</a></li>
         </ul>
       </nav>
     </header>
