--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -344,7 +344,7 @@
       <h3>進階練習-選單</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/menu_exercise.html">練習連結</a><br><br>
       <h3>進階練習-個人網站首頁</h3>
-      <a href="https://guidephy.github.io/exercises/WebDesign/menu_firstWebPage.html">練習連結</a><br><br>
+      <a href="https://guidephy.github.io/exercises/WebDesign/firstWebPage.html">練習連結</a><br>
       <a href="https://drive.google.com/drive/folders/1I9jDpq88vh4BHUoVMzcfuoyWh9B4ESz7?usp=sharing">檔案下載</a><br>
       <a href="https://www.youtube.com/watch?v=GdrbE-s5DgQ">參考資料</a><br>
       <br>
