--- a/period.html
+++ b/period.html
@@ -175,7 +175,7 @@
 				<td class="symbol"><sub>6</sub>C</td>
 				<td class="symbol"><sub>7</sub>N</td>
 				<td class="symbol"><sub>8</sub>O</td>
-				<td class="symbol"><sub>9</sub>F</td>
+				<td class="symbol"><sub>9</sub></td>
 				<td class="symbol"><sub>10</sub>Ne</td>
 			</tr>
 			<tr>
@@ -193,9 +193,9 @@
 				<td class="nonesymbol"></td>
 				<td class="nonesymbol"></td>
 				<td class="symbol"><sub>13</sub>Al</td>
-				<td class="symbol"><sub>14</sub>Si</td>
+				<td class="symbol"><sub>14</sub></td>
 				<td class="symbol"><sub>15</sub>P</td>
-				<td class="symbol"><sub>16</sub>S</td>
+				<td class="symbol"><sub>16</subS</td>
 				<td class="symbol"><sub>17</sub>Cl</td>
 				<td class="symbol"><sub>18</sub>Ar</td>
 			</tr>
@@ -204,16 +204,16 @@
 				<td class="symbol"><sub>19</sub>K</td>
 				<td class="symbol"><sub>20</sub>Ca</td>
 				<td class="symbol"><sub>21</sub>Sc</td>
-				<td class="symbol"><sub>22</sub>Ti</td>
+				<td class="symbol"><sub>22</sub></td>
 				<td class="symbol"><sub>23</sub>V</td>
 				<td class="symbol"><sub>24</sub>Cr</td>
 				<td class="symbol"><sub>25</sub>Mn</td>
-				<td class="symbol"><sub>26</sub>Fe</td>
+				<td class="symbol"><sub>26</sub></td>
 				<td class="symbol"><sub>27</sub>Co</td>
 				<td class="symbol"><sub>28</sub>Ni</td>
 				<td class="symbol"><sub>29</sub>Cu</td>
 				<td class="symbol"><sub>30</sub>Zn</td>
-				<td class="symbol"><sub>31</sub>Ga</td>
+				<td class="symbol"><sub>31</sub></td>
 				<td class="symbol"><sub>32</sub>Ge</td>
 				<td class="symbol"><sub>33</sub>As</td>
 				<td class="symbol"><sub>34</sub>Se</td>
@@ -222,8 +222,8 @@
 			</tr>
 			<tr>
 				<td class="nonesymbol">5</td>
-				<td class="symbol"><sub>37</sub>Rb</td>
-				<td class="symbol"><sub>38</sub>Sr</td>
+				<td class="symbol"><sub>37</sub></td>
+				<td class="symbol"><sub>38</sub></td>
 				<td class="symbol"><sub>39</sub>Y</td>
 				<td class="symbol"><sub>40</sub>Zr</td>
 				<td class="symbol"><sub>41</sub>Nb</td>
@@ -236,14 +236,14 @@
 				<td class="symbol"><sub>48</sub>Cd</td>
 				<td class="symbol"><sub>49</sub>In</td>
 				<td class="symbol"><sub>50</sub>Sn</td>
-				<td class="symbol"><sub>51</sub>Sb</td>
+				<td class="symbol"><sub>51</sub></td>
 				<td class="symbol"><sub>52</sub>Te</td>
 				<td class="symbol"><sub>53</sub>I</td>
-				<td class="symbol"><sub>54</sub>Xe</td>
+				<td class="symbol"><sub>54</sub></td>
 			</tr>
 			<tr>
 				<td class="nonesymbol">6</td>
-				<td class="symbol"><sub>55</sub>Cs</td>
+				<td class="symbol"><sub>55</sub></td>
 				<td class="symbol"><sub>56</sub>Ba</td>
 				<td class="Lasymbol"><sub>57</sub>La</td>
 				<td class="symbol"><sub>72</sub>Hf</td>
@@ -256,7 +256,7 @@
 				<td class="symbol"><sub>79</sub>Au</td>
 				<td class="symbol"><sub>80</sub>Hg</td>
 				<td class="symbol"><sub>81</sub>Tl</td>
-				<td class="symbol"><sub>82</sub>Pd</td>
+				<td class="symbol"><sub>82</sub></td>
 				<td class="symbol"><sub>83</sub>Bi</td>
 				<td class="symbol"><sub>84</sub>Po</td>
 				<td class="symbol"><sub>85</sub>At</td>
