--- a/period.html
+++ b/period.html
@@ -173,7 +173,7 @@
 				<td class="symbol"><sub>6</sub>C</td>
 				<td class="symbol"><sub>7</sub>N</td>
 				<td class="symbol"><sub>8</sub>O</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>9</sub></td>
+				<td class="symbol" stytle="background-color= yellow;"><sub>9</sub></td>
 				<td class="symbol"><sub>10</sub>Ne</td>
 			</tr>
 			<tr>
@@ -191,7 +191,7 @@
 				<td class="nonesymbol"></td>
 				<td class="nonesymbol"></td>
 				<td class="symbol"><sub>13</sub>Al</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>14</sub></td>
+				<td class="symbol" stytle="background-color=yellow;"><sub>14</sub></td>
 				<td class="symbol"><sub>15</sub>P</td>
 				<td class="symbol"><sub>16</subS</td>
 				<td class="symbol"><sub>17</sub>Cl</td>
