--- a/period.html
+++ b/period.html
@@ -191,7 +191,7 @@
 				<td class="nonesymbol"></td>
 				<td class="nonesymbol"></td>
 				<td class="symbol"><sub>13</sub>Al</td>
-				<td class="symbol" stytle="background-color=yellow;"><sub>14</sub></td>
+				<td class="symbol"  style="background-color:yellow;"><sub>14</sub></td>
 				<td class="symbol"><sub>15</sub>P</td>
 				<td class="symbol"><sub>16</subS</td>
 				<td class="symbol"><sub>17</sub>Cl</td>
@@ -202,16 +202,16 @@
 				<td class="symbol"><sub>19</sub>K</td>
 				<td class="symbol"><sub>20</sub>Ca</td>
 				<td class="symbol"><sub>21</sub>Sc</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>22</sub></td>
+				<td class="symbol"  style="background-color:yellow;"><sub>22</sub></td>
 				<td class="symbol"><sub>23</sub>V</td>
 				<td class="symbol"><sub>24</sub>Cr</td>
 				<td class="symbol"><sub>25</sub>Mn</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>26</sub></td>
+				<td class="symbol"  style="background-color:yellow;"><sub>26</sub></td>
 				<td class="symbol"><sub>27</sub>Co</td>
 				<td class="symbol"><sub>28</sub>Ni</td>
 				<td class="symbol"><sub>29</sub>Cu</td>
 				<td class="symbol"><sub>30</sub>Zn</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>31</sub></td>
+				<td class="symbol"  style="background-color:yellow;"><sub>31</sub></td>
 				<td class="symbol"><sub>32</sub>Ge</td>
 				<td class="symbol"><sub>33</sub>As</td>
 				<td class="symbol"><sub>34</sub>Se</td>
@@ -220,8 +220,8 @@
 			</tr>
 			<tr>
 				<td class="nonesymbol">5</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>37</sub></td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>38</sub></td>
+				<td class="symbol" style="background-color:yellow;"><sub>37</sub></td>
+				<td class="symbol" style="background-color:yellow;"><sub>38</sub></td>
 				<td class="symbol"><sub>39</sub>Y</td>
 				<td class="symbol"><sub>40</sub>Zr</td>
 				<td class="symbol"><sub>41</sub>Nb</td>
@@ -234,14 +234,14 @@
 				<td class="symbol"><sub>48</sub>Cd</td>
 				<td class="symbol"><sub>49</sub>In</td>
 				<td class="symbol"><sub>50</sub>Sn</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>51</sub></td>
+				<td class="symbol"style="background-color:yellow;"><sub>51</sub></td>
 				<td class="symbol"><sub>52</sub>Te</td>
 				<td class="symbol"><sub>53</sub>I</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>54</sub></td>
+				<td class="symbol" style="background-color:yellow;"><sub>54</sub></td>
 			</tr>
 			<tr>
 				<td class="nonesymbol">6</td>
-				<td class="symbol" stytle="background-color: yellow;"><sub>55</sub></td>
+				<td class="symbol" style="background-color:yellow;"><sub>55</sub></td>
 				<td class="symbol"><sub>56</sub>Ba</td>
 				<td class="Lasymbol"><sub>57</sub>La</td>
 				<td class="symbol"><sub>72</sub>Hf</td>
@@ -254,7 +254,7 @@
 				<td class="symbol"><sub>79</sub>Au</td>
 				<td class="symbol"><sub>80</sub>Hg</td>
 				<td class="symbol"><sub>81</sub>Tl</td>
-				<td class="symbol"stytle="background-color: yellow;"><sub>82</sub></td>
+				<td class="symbol"style="background-color:yellow;"><sub>82</sub></td>
 				<td class="symbol"><sub>83</sub>Bi</td>
 				<td class="symbol"><sub>84</sub>Po</td>
 				<td class="symbol"><sub>85</sub>At</td>
