--- a/period.html
+++ b/period.html
@@ -173,7 +173,7 @@
 				<td class="symbol"><sub>6</sub>C</td>
 				<td class="symbol"><sub>7</sub>N</td>
 				<td class="symbol"><sub>8</sub>O</td>
-				<td class="symbol" stytle="background-color= yellow;"><sub>9</sub></td>
+				<td class="symbol" ><sub>9</sub>F</td>
 				<td class="symbol"><sub>10</sub>Ne</td>
 			</tr>
 			<tr>
