--- a/WebDesign_lesson3.html
+++ b/WebDesign_lesson3.html
@@ -337,18 +337,18 @@
    
 
       <br>
-      <h3>進階練習-互動功能</h3>
+      <h3>進階練習1-互動功能</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_exercise.html">練習連結</a><br><br>
-      <h3>進階練習-響應式網頁設計(RWD)</h3>
+      <h3>進階練習2-響應式網頁設計(RWD)</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/CSS_Responsive_exercise.html">練習連結</a><br><br>
-      <h3>進階練習-選單</h3>
+      <h3>進階練習3-選單</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/menu_exercise.html">練習連結</a><br><br>
-      <h3>進階練習-個人網站首頁</h3>
+      <h3>進階練習4-個人網站首頁</h3>
       <a href="https://guidephy.github.io/exercises/WebDesign/firstWebPage.html">練習連結</a><br>
       <a href="https://drive.google.com/drive/folders/1I9jDpq88vh4BHUoVMzcfuoyWh9B4ESz7?usp=sharing">檔案下載</a><br>
       <a href="https://www.youtube.com/watch?v=GdrbE-s5DgQ">參考資料</a><br>
       <br>
-      <h3>進階練習-網頁遊戲設計</h3>
+      <h3>進階練習5-網頁遊戲設計</h3>
       <a href="https://drive.google.com/drive/folders/1AEr0tJWcv7ya6cPEE4B0hWbX_9aSSwhx?usp=sharing">檔案下載</a><br>
       <br>
       
