--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           </li>
           
-          <li><a href="https://forms.gle/iA7uS9AMCRAcBNZS7</a>Homework</li>
+          <li><a href="https://forms.gle/iA7uS9AMCRAcBNZS7"</a>Homework</li>
         </ul>
       </nav>
     </header>
