--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                    <a href="https://guidephy.github.io/grades.html">課堂計分</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
-                  <a href="https://guidephy.notion.site/Unity-Learning-d45d104ccbf34dcaa15c937affee7546">unity學習筆記</a>
+                  <a href="https://guidephy.notion.site/Learn-to-Create-An-RPG-Game-In-Unity-Tutorial-Udemy-e1e79f20d692448b86fd4fc740aac94b?pvs=4">unity2D學習筆記</a>
+                  <a href="https://guidephy.notion.site/Unity-Learning-d45d104ccbf34dcaa15c937affee7546">unity3D學習筆記</a>
                 
               </div>
 
