--- a/exp.html
+++ b/exp.html
@@ -181,6 +181,7 @@
 <br>
 <p>工作紀錄下載:</><a href="https://drive.google.com/file/d/1bKuLoG4w9BD1gNuEMDhYcsZWw3R4T6I8/view?usp=share_link" target="_blank">實驗工作紀錄(空白)</a>
 <p>學習單下載:</><a href="https://drive.google.com/file/d/1IT_W1jWAmYk-MYExDo9iV19AyAGi77I_/view?usp=sharing" target="_blank">紙杯射門員探究實驗報告(空白)</a>
+<p>204期末報告:</><a href="https://docs.google.com/spreadsheets/d/1U88k2oWcsteqHNHTHCzjjONPaHaWqs1wntfkTocz8qE/edit?usp=sharing" target="_blank">簡報連結</a>
 <br><br>
       
 
