--- a/physics.html
+++ b/physics.html
@@ -139,6 +139,7 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFokQMhOqA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+<br><p>學習單下載:</><a href="https://drive.google.com/file/d/1KfpiFTDSXxzYbpdeiUTO_Fbo74vufKwG/view?usp=drive_link" target="_blank">滑車實驗學習單</a>
 
       
 <br><br>
