--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFqHbQMJD0&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<br><p>學習單下載:</><a href="https://drive.google.com/file/d/1xxrlmsoR6B-35VAqFkV-LpR9tdD994r1/view?usp=drive_link" target="_blank">電學實驗學習單</a>
+<br><p>學習單下載:</><a href="https://drive.google.com/file/d/1D6YVBBoNBlyVE4fWkqUvtHbgDaSmDYI-/view?usp=sharing" target="_blank">電學實驗學習單</a>
       
 <br><br>
 
