--- a/exp.html
+++ b/exp.html
@@ -119,7 +119,7 @@
 </div>
     
  <br> 
-<p>學習單下載:</><a href="https://drive.google.com/file/d/1Q36d0Fqc6upfnRfoUk_FvqPucTEqO59T/view?usp=sharing" target="_blank">實驗規劃學習單</a>
+<p>學習單下載:</><a href="https://drive.google.com/file/d/1Q36d0Fqc6upfnRfoUk_FvqPucTEqO59T/view?usp=sharing" target="_blank">實驗數據學習單</a>
 <br><br>
 
   
