--- a/WebDesign.html
+++ b/WebDesign.html
@@ -48,7 +48,7 @@
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
-                   <a href="https://guidephy.github.io/grades.html">課堂計分</a>
+                   <a href="https://www.canva.com/design/DAFutImFoAk/c2M2EOHfg-4t54SLgEuvaQ/view?utm_content=DAFutImFoAk&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">科博idea</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                 
               </div>
