--- a/physics.html
+++ b/physics.html
@@ -113,7 +113,7 @@
       </header>
     
 <div>
-<iframe src="https://drive.google.com/file/d/1d0VJWhz7PEC-aQhkurhQ22PzuYdSSuus/view?usp=sharing" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1d0VJWhz7PEC-aQhkurhQ22PzuYdSSuus/preview" width="640" height="480" allow="autoplay"></iframe>
      <p align="right">影片來源:NASA Scientific Visualization Studio
 </p>
         
