--- a/physics.html
+++ b/physics.html
@@ -129,7 +129,7 @@
     
 <div>
   <iframe src="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html" width="640" height="480" allow="autoplay"></iframe>
-     <p align="right">來源:PHET<a target="_blank" href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html"></p>
+     <p align="right">來源:<a target="_blank" href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">PHET</p>
 
         
 </div>
