--- a/Ophysics.html
+++ b/Ophysics.html
@@ -80,7 +80,7 @@
   <iframe src="https://www.youtube.com/embed/P7cEPc5cwKU?rel=0" width="640" height="360" allow="autoplay"></iframe>
 </div>
 <div align="right">
-<p>影片來源:<a target="_blank" href="https://www.youtube.com/@CooC-Cloud">臺北酷課雲</p>
+<p>影片來源:<a target="_blank" href="https://www.youtube.com/@CooC-Cloud">臺北酷課雲</a></p>
 </div>
 <div id="Question" style='visibility:hidden'  >
     <div class="question" >
@@ -102,7 +102,7 @@
 
     <div class="question" >
         <h3>問題 3（簡答題）：......？</h3>
-        <textarea id="q3Answer" rows="1" cols="50"></textarea>
+        <input type="text" id="q3Answer" >
     </div>
 
     <!-- 送出答案的按鈕 -->
