--- a/Ophysics.html
+++ b/Ophysics.html
@@ -13,7 +13,9 @@
   <link href="css/style.css" rel="stylesheet">
   
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
-   <script src="JS/menu.js"></script>
+  
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="JS/menu.js"></script>
   
 </head>
 
