--- a/phyhistorytest.html
+++ b/phyhistorytest.html
@@ -92,7 +92,7 @@
             
    <div id="playagain" style="text-align:center;display: none;">
         <button id="rankBtn" onclick="rank()" >看排名</button>  
-        <a href="https://guidephy.github.io/test.html">再玩一次</a>
+        <a href="https://guidephy.github.io/phyhistorytest.html">再玩一次</a>
    </div>
         
   
@@ -146,6 +146,7 @@
 
 
       <script src="JS/phyhistorytest.js"></script>
+  </html>
  
 
  </body>
