--- a/Ophysics.html
+++ b/Ophysics.html
@@ -43,7 +43,7 @@ input[type="radio"] {
   border: 1px solid #ccc; /* 設置框線為淺灰色 */
   padding: 8px; /* 設置內邊距以增加舒適性 */
 }
-  </style>>
+  </style>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
