--- a/Ophysics.html
+++ b/Ophysics.html
@@ -115,8 +115,7 @@ input[type="radio"] {
   <p>影片來源:<a target="_blank" href="https://www.youtube.com/@CooC-Cloud">臺北酷課雲</a></p>
   </div>
 
-</div>
-<div id="Question" style="display: none;" >
+  <div id="Question" style="display: none;" >
     <div class="question" >
         <h3>問題 1</h3>
         <img id="question1" src="" alt="問題1">
@@ -156,6 +155,14 @@ input[type="radio"] {
         <button id="submitBtn" onclick="submitAnswers()" >下一關</button>
     </div>
 </div>
+
+</div>
+
+    <div id="restartButton" align="center" style="display: none;" > 
+      <a href="https://guidephy.github.io/Ophysics" >
+         <button>繼續學習</button>
+       </a>
+    </div>
 <br><br> 
 <script src="JS/Ophysics.js">
 
